force-app/main/default/objects/Trainer__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Exp</fullName>
            </value>
            <value>
                <fullName>Corporate Trainer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Trainer.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>