force-app/main/default/objects/Trainer__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>offline</fullName>
            </value>
            <value>
                <fullName>online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>