force-app/main/default/objects/Trainer__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <label>Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>